<resources>
    <string name="app_name">OurCart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_1">Offers</string>
    <string name="item_2">Electronics</string>
    <string name="item_3">Lifestyle</string>
    <string name="item_4">Home Appliances</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!
    </string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>
    <string name="fast_delivery">Fast Delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">home</string>
    <string name="menu_login">login</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="email_error">invalid email id</string>
    <string name="invalid_password">invalid password</string>
    <string name="regex_password">.{8,}</string>
    <string name="email_id">email</string>
    <string name="password_input">password</string>
    <string name="Signp_city">city</string>
    <string name="signupphone_number">phone number</string>
    <string name="signup_username">username</string>
    <string name="signupemail_id">Email Id</string>
    <string name="signuppassword">Password</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="user_name">username</string>
    <string name="phone_number">phone</string>
    <string name="city_name">city</string>
    <string name="invalid_username">invalid username</string>
    <string name="invalid_phone">invalid phone number</string>
    <string name="invalid_city">invalid city</string>
    <string name="prod_name">productname</string>
    <string name="prod_id">prodid</string>
    <string name="Email">email</string>
    <string name="UserName">username</string>
    <string name="PhoneNumber">phone</string>
    <string name="City">city</string>
    <string name="Password">password</string>
</resources>