<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Fragments.SignupFragment">
    <LinearLayout
        android:id="@+id/logolinear"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/logo_design"
        android:elevation="15dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logolinear"
        android:orientation="vertical"
        android:layout_marginTop="8dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Our Cart"
        android:textStyle="bold"
        android:textColor="@color/new_green"
        android:textSize="28dp"
        android:fontFamily="@font/dancin_regular"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/signup_email_id"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/signupemail_id"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/reddish_pink"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
        android:drawableTint="@color/reddish_pink"
        android:drawablePadding="6dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/reddish_pink"
        android:background="@drawable/input_design"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        />
    <EditText
        android:id="@+id/signup_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/signup_username"
        android:inputType="text|textEmailAddress"
        android:textColorHint="@color/reddish_pink"
        android:layout_marginTop="18dp"
        android:drawableLeft="@drawable/ic_baseline_people_outline_24"
        android:drawableTint="@color/reddish_pink"
        android:drawablePadding="6dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/reddish_pink"
        android:background="@drawable/input_design"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        />
        <EditText
            android:id="@+id/signup_phone"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/signupphone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:textColorHint="@color/reddish_pink"
            android:layout_marginTop="18dp"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawableTint="@color/reddish_pink"
            android:drawablePadding="6dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/reddish_pink"
            android:background="@drawable/input_design"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            />

        <EditText
            android:id="@+id/signup_city"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/Signp_city"
            android:inputType="text"
            android:textColorHint="@color/reddish_pink"
            android:layout_marginTop="18dp"
            android:textColor="@color/reddish_pink"
            android:background="@drawable/input_design"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:drawableTint="@color/reddish_pink"
            android:drawablePadding="6dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
        <EditText
            android:id="@+id/signup_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/signuppassword"
            android:inputType="textPassword"
            android:textColorHint="@color/reddish_pink"
            android:layout_marginTop="18dp"
            android:textColor="@color/reddish_pink"
            android:background="@drawable/input_design"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawableTint="@color/reddish_pink"
            android:drawablePadding="6dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />


    <Button
        android:id="@+id/regbtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up_btn"
        android:gravity="center_horizontal|center_vertical"
        android:textAllCaps="false"
        android:background="@drawable/register_btn"
        android:textColor="@android:color/white"
        android:textStyle="normal"/>
    </LinearLayout>







</RelativeLayout>